test/parser/should_succeed/unless.souc
main() = do
	unless 85 do
		print "hello"
	end unless
