test/parser/should_fail/subroutine3.souc
main() = do
    cause_explosion
end main

cause_explosion() = do
    explode "this is so bad"
        end cause_explosion
